src/objects/DR_Approvers_List__c/DR_Approvers_List__c.object-meta.xml
<CustomObject>
    <description>DR default Approvers List based CBT value</description>
    <label>DR Approvers List</label>
    <nameField>
        <displayFormat>DRDAP-{0000}</displayFormat>
        <label>DR Approvers List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DR Approvers List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>