src/objects/DR_Approvers_List__c/fields/Account_Opener_Backup__c.field-meta.xml
<CustomField>
    <fullName>Account_Opener_Backup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Opener Backup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DR_Approvers_List7</relationshipName>
    <type>Lookup</type>
</CustomField>