src/objects/DR_Approvers_List__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DR_Approvers_List</relationshipName>
    <type>Lookup</type>
</CustomField>