src/objects/DR_Approvers_List__c/fields/C_PS__c.field-meta.xml
<CustomField>
    <fullName>C_PS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C&amp;PS</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DR Approvers List (C&amp;PS)</relationshipLabel>
    <relationshipName>DR_Approvers_List4</relationshipName>
    <type>Lookup</type>
</CustomField>