src/objects/DR_Approvers_List__c/fields/Contracts__c.field-meta.xml
<CustomField>
    <fullName>Contracts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contracts</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DR Approvers List (Contracts)</relationshipLabel>
    <relationshipName>DR_Approvers_List3</relationshipName>
    <type>Lookup</type>
</CustomField>