src/objects/DR_Approvers_List__c/fields/Engineering__c.field-meta.xml
<CustomField>
    <fullName>Engineering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engineering</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DR Approvers List (Engineering)</relationshipLabel>
    <relationshipName>DR_Approvers_List1</relationshipName>
    <type>Lookup</type>
</CustomField>