src/objects/DR_Approvers_List__c/fields/Finance__c.field-meta.xml
<CustomField>
    <fullName>Finance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DR_Approvers_List4</relationshipName>
    <type>Lookup</type>
</CustomField>