src/objects/DR_Approvers_List__c/fields/Growth_Leader__c.field-meta.xml
<CustomField>
    <fullName>Growth_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Growth Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DR_Approvers_List3</relationshipName>
    <type>Lookup</type>
</CustomField>