src/objects/DR_Approvers_List__c/fields/ISC__c.field-meta.xml
<CustomField>
    <fullName>ISC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ISC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DR Approvers List</relationshipLabel>
    <relationshipName>DR_Approvers_List</relationshipName>
    <type>Lookup</type>
</CustomField>