src/objects/DR_Approvers_List__c/fields/Key_Code__c.field-meta.xml
<CustomField>
    <fullName>Key_Code__c</fullName>
    <label>Key Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>