src/objects/DR_Approvers_List__c/fields/M_PM__c.field-meta.xml
<CustomField>
    <fullName>M_PM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>M&amp;PM</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DR Approvers List (M&amp;PM)</relationshipLabel>
    <relationshipName>DR_Approvers_List2</relationshipName>
    <type>Lookup</type>
</CustomField>