src/objects/DR_Approvers_List__c/fields/PMOS_Leader__c.field-meta.xml
<CustomField>
    <fullName>PMOS_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PMOS Leader</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DR Approvers List (PMOS Leader)</relationshipLabel>
    <relationshipName>DR_Approvers_List5</relationshipName>
    <type>Lookup</type>
</CustomField>