src/objects/DR_Approvers_List__c/fields/Pricing__c.field-meta.xml
<CustomField>
    <fullName>Pricing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DR_Approvers_List5</relationshipName>
    <type>Lookup</type>
</CustomField>