src/objects/DR_Approvers_List__c/fields/Proposal_Manager__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DR_Approvers_List2</relationshipName>
    <type>Lookup</type>
</CustomField>