src/objects/DR_Approvers_List__c/fields/Sales_Operations_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Sales_Operations_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Operations Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DR_Approvers_List1</relationshipName>
    <type>Lookup</type>
</CustomField>