src/objects/DR_Approvers_List__c/validationRules/GBEnKeyCode_MustBeBlank_DnS.validationRule-meta.xml
<ValidationRule>
    <fullName>GBEnKeyCode_MustBeBlank_DnS</fullName>
    <active>true</active>
    <description>GBE and Key Code must be blank for D&amp;S DR Approvers, please clear these fields.</description>
    <errorConditionFormula>AND( 
not CONTAINS( $Profile.Name, &quot;API&quot; ), 
not CONTAINS( $Profile.Name, &quot;Admin&quot; ), 
ISPICKVAL( SBU__c , &quot;D&amp;S&quot;), 
OR( 
NOT(ISBLANK(text( GBE__c ))), 
NOT(ISBLANK(Key_Code__c)) 
) 
)</errorConditionFormula>
    <errorMessage>GBE and Key Code must be blank for D&amp;S DR Approvers, please clear these fields.</errorMessage>
</ValidationRule>