src/objects/DR_Approvers_List__c/validationRules/GBEnKeyCode_Required_Non_DandS.validationRule-meta.xml
<ValidationRule>
    <fullName>GBEnKeyCode_Required_Non_DandS</fullName>
    <active>true</active>
    <description>GBE and Key Code are required fields for non-D&amp;S approvers.</description>
    <errorConditionFormula>AND( 
not CONTAINS( $Profile.Name, &quot;API&quot; ), 
not CONTAINS( $Profile.Name, &quot;Admin&quot; ), 
ISPICKVAL( SBU__c , &quot;ATR&quot;)||ISPICKVAL( SBU__c , &quot;BGA&quot;), 
OR( 
ISBLANK(text( GBE__c )), 
ISBLANK(Key_Code__c) 
) 
)</errorConditionFormula>
    <errorMessage>GBE and Key Code are required fields for this record.</errorMessage>
</ValidationRule>