src/objects/DR_Approvers_List__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SBU__c</columns>
    <columns>CBT__c</columns>
    <columns>Approver__c</columns>
    <columns>Account_Opener__c</columns>
    <columns>Growth_Leader__c</columns>
    <columns>Proposal_Manager__c</columns>
    <columns>Pricing__c</columns>
    <columns>Sales_Operations_Analyst__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>