src/objects/DR_Approvers_List__c/listViews/ATR_and_BGA_Approvers.listView-meta.xml
<ListView>
    <fullName>ATR_and_BGA_Approvers</fullName>
    <columns>NAME</columns>
    <columns>SBU__c</columns>
    <columns>CBT__c</columns>
    <columns>GBE__c</columns>
    <columns>Approver__c</columns>
    <columns>Account_Opener__c</columns>
    <columns>Account_Opener_Backup__c</columns>
    <columns>Key_Code__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>SBU__c</field>
        <operation>equals</operation>
        <value>Aero Level,ATR,BGA</value>
    </filters>
    <label>ATR and BGA Approvers</label>
</ListView>